--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,6 +2,6 @@
 
 github: canarddu38
 patreon: ducksploit
-paypal: Canarddu38
-custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ["https://www.paypal.me/Canarddu38"]
+
 
