--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,6 +2,6 @@
 
 github: canarddu38
 patreon: ducksploit
-custom: ["https://www.paypal.me/Canarddu38, paypal.com"]
+custom: ["https://www.paypal.me/Canarddu38", "paypal.com"]
 
 
