--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,6 +2,6 @@
 
 github: canarddu38
 patreon: ducksploit
-custom: ["https://www.paypal.com/paypalme/Canarddu38"]
+custom: ["https://paypal.me/Canarddu38"]
 
 
